--- a/tutorials/Exercise-one/index.html
+++ b/tutorials/Exercise-one/index.html
@@ -126,7 +126,7 @@ through CLUZ to produce more efficient conservation plans.</p>
     Internet browser may warn you about downloading zip files but these
     CLUZ files are safe). Unzip the tutorial files by right-clicking on
     the zip file and choosing <strong>Extract All...</strong></p>
-<p><a href="files/cluz_ex1.zip">CLUZ Exercise 1 data (cluz_ex1.zip)</a></p>
+<p><a href="../files/cluz_ex1.zip">CLUZ Exercise 1 data (cluz_ex1.zip)</a></p>
 <h3 id="section-1b-viewing-the-cluz-files">Section 1b - Viewing the CLUZ files</h3>
 <p>CLUZ provides a set of tools that allow users to identify a portfolio of
 planning units that, when combined, meet specified conservation targets.
